Avoid overflow on the canvas for better performance.

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -73,7 +73,7 @@ html, body {
     }
 
 #canvas {
-    position: relative;
+    overflow: hidden;
 }
 
 #controls {
